--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@react-navigation/native": "^7.1.6",
     "@supabase/supabase-js": "^2.57.2",
     "expo": "^54.0.1",
+    "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.6",
     "expo-camera": "~17.0.7",
     "expo-constants": "~18.0.8",
+    "expo-crypto": "~15.0.7",
+    "expo-env": "^1.1.1",
     "expo-font": "~14.0.7",
     "expo-haptics": "~15.0.6",
     "expo-image": "~3.0.7",
@@ -37,6 +40,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.81.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.0",
@@ -44,7 +48,9 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.5.1"
+    "react-native-worklets": "^0.5.1",
+    "rn-ocr-lib": "^0.2.4",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
